* Updated the top section of the visualizations so that wraps correctly on smaller screens. * Changed the color of the X /Y axis for all of the visualizations on the search results page so that they match the mocks. * Styled the title selector dropdown.

--- a/src/_scss/components/visualizations/_description.scss
+++ b/src/_scss/components/visualizations/_description.scss
@@ -1,11 +1,11 @@
 .visualization-description {
+    @include span-columns(16);
+    @include media($tablet-screen) {
+        @include span-columns(9);
+    }
     .content {
-        color: #525252;
+        color: $color-base;
         font-size: $small-font-size;
         line-height: rem(26);
-        margin-right: rem(20);
-        @include media($medium-screen) {
-            margin-right: rem(50);
-        }
     }
 }
