--- a/src/_scss/elements/_underlineButton.scss
+++ b/src/_scss/elements/_underlineButton.scss
@@ -5,13 +5,14 @@
 @mixin underlineButton {
     button {
         @include button-unstyled;
+        border-bottom: rem(4) solid transparent;
         color: #808288;
         font-size: rem(14);
+        font-weight: $font-semibold;
         line-height: rem(18);
         padding: 0 rem(10);
         padding-bottom: rem(5);
-        border-bottom: rem(4) solid transparent;
-        font-weight: $font-semibold;
+        text-align: center;
         &:hover {
             @include transition(all 0.25s $ease-in-out-sine);
             border-bottom: rem(4) solid darken( $color-primary-alt-lightest, 15%);
@@ -19,8 +20,8 @@
         }
         &.active,
         &:active {
-            color: $color-gray-dark;
             border-bottom: rem(4) solid $color-primary-alt-dark;
+            color: $color-gray-dark;
         }
     }
 }
